style: changed nodeJS to be bold

--- a/projects.html
+++ b/projects.html
@@ -35,7 +35,7 @@
             <div class="container-project container-center">
                 <h2>are you a game of thrones fan?</h2>
                 <small>November, 2020</small>
-                <p class="section-paragraph">Another nodeJS CLI app based on Game of Thrones. Let's see how well do you
+                <p class="section-paragraph">Another <strong>nodeJS</strong> CLI app based on Game of Thrones. Let's see how well do you
                     know 'Game of Thrones' trivia?</p>
 
                 <a class="link link-primary"
