fix: added projects and blogs link in index.html

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <p class="section-paragraph">I would love to showcase my work and thus, you can see my projects on github or
                 live, hosted online.
             </p>
-            <a href="/" class="link link-primary">Browse Projects</a>
+            <a href="/projects.html" class="link link-primary">Browse Projects</a>
         </div>
     </section>
 
@@ -58,7 +58,7 @@
             <p>I like to share the knowledge with people through blogs. Also, I am documenting my journey of learning
                 front end development and thus creating some tangible ouput through the medium of blogs and projects.
             </p>
-            <a href="/" class="link link-secondary">Read Blogs</a>
+            <a href="/blogs.html" class="link link-secondary">Read Blogs</a>
         </div>
     </section>
 
