--- a/projects.html
+++ b/projects.html
@@ -34,8 +34,9 @@
         <li>
             <div class="container-project container-center">
                 <h2>are you a game of thrones fan?</h2>
-                <small>November, 2020</small>
-                <p class="section-paragraph">Another <strong>nodeJS</strong> CLI app based on Game of Thrones. Let's see how well do you
+                <small> 20th November, 2020</small>
+                <p class="section-paragraph">A <strong>nodeJS</strong> CLI app based on Game of Thrones. Let's see how
+                    well do you
                     know 'Game of Thrones' trivia?</p>
 
                 <a class="link link-primary"
@@ -48,7 +49,7 @@
         <li>
             <div class="container-project container-center">
                 <h2>how well do you know me?</h2>
-                <small>November, 2020</small>
+                <small>18th November, 2020</small>
                 <p class="section-paragraph">A CLI app built with <strong>nodeJS</strong>. You can send this to your
                     friends and find out who really knows you.</p>
 
