--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <header class="hero">
         <img src="/images/developer.svg" class="hero-img">
         <h1 class="hero-heading">I'm a <span class="header-color">full stack developer</span></h1>
+        <h3 class="hero-heading">Positive attitude and zeal for learning.</span></h3>
     </header>
 
     <section class="section section-offwhite">
