style: added images for social media links

--- a/index.html
+++ b/index.html
@@ -66,9 +66,12 @@
     <footer class="footer">
         <div>CONTACT ME</div>
         <ul class="list-non-bullet">
-            <li class="list-inline"><a class="link" href="https://github.com/prachigupta28">github</a> </li>
-            <li class="list-inline"><a class="link" href="https://www.linkedin.com/in/prachi-gupta28">linkedin</a></li>
-            <li class="list-inline"><a class="link" href="https://www.instagram.com/prachi_g28/">instagram</a></li>
+            <li class="list-inline"><a class="link" href="https://github.com/prachigupta28"><img
+                        src="/images/github.svg" class="link-image"></a> </li>
+            <li class="list-inline"><a class="link" href="https://www.linkedin.com/in/prachi-gupta28"><img
+                        src="/images/linkedin.svg" class="link-image"></a></li>
+            <li class="list-inline"><a class="link" href="https://www.instagram.com/prachi_g28/"><img
+                        src="/images/instagram.svg" class="link-image"></a></li>
         </ul>
     </footer>
 
