style: added twitter link

--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
                         src="/images/github.svg" class="link-image"></a> </li>
             <li class="list-inline"><a class="link" href="https://www.linkedin.com/in/prachi-gupta28"><img
                         src="/images/linkedin.svg" class="link-image"></a></li>
-            <li class="list-inline"><a class="link" href="https://www.instagram.com/prachi_g28/"><img
-                        src="/images/instagram.svg" class="link-image"></a></li>
+            <li class="list-inline"><a class="link" href="https://www.twitter.com/PrachiG63746764/"><img
+                        src="/images/twitter.svg" class="link-image"></a></li>
         </ul>
     </footer>
 
