Modified the descrpition of my projects

--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
     <section class="section">
         <div class="container container-center">
             <h1>projects</h1>
-            <p class="section-paragraph">I would love to showcase my work and thus, you can see my projects on github or
+            <p class="section-paragraph">Inorder to grasp the concepts, one must put them into use by building
+                something, therefore I would love to showcase my projects. You can see them on github or
                 live, hosted online.
             </p>
             <a href="/projects.html" class="link link-primary">Browse Projects</a>
