--- a/projects.html
+++ b/projects.html
@@ -35,7 +35,8 @@
             <div class="container-project container-center">
                 <h2>are you a game of thrones fan?</h2>
                 <small> 20th November, 2020</small>
-                <p class="section-paragraph">A <strong>nodeJS</strong> CLI app based on Game of Thrones. Let's see how
+                <p class="section-paragraph">This is a CLI app created using <strong>JavaScript</strong> based on Game
+                    of Thrones. Let's see how
                     well do you
                     know 'Game of Thrones' trivia?</p>
 
@@ -50,8 +51,8 @@
             <div class="container-project container-center">
                 <h2>how well do you know me?</h2>
                 <small>18th November, 2020</small>
-                <p class="section-paragraph">A CLI app built with <strong>nodeJS</strong>. You can send this to your
-                    friends and find out who really knows you.</p>
+                <p class="section-paragraph">This is another CLI app developed using <strong>JavaScript</strong>. Its a quiz for my
+                    friends , to find out how well they knows me.</p>
 
                 <a class="link link-primary" href="https://repl.it/@prachig/assigment-1?embed=1&output=1">Play Game</a>
                 <a class="link link-secondary" href="https://github.com/prachigupta28/cli-app-quiz">View source code</a>
