--- a/blogs.html
+++ b/blogs.html
@@ -30,6 +30,32 @@
         <img src="/images/reading.svg" class="hero-img">
         <h1 class="hero-heading">My Blogs</h1>
     </header>
+
+    <section class="section section-offwhite">
+        <div class="container container-center">
+            <a href="/blog2.html" class="link">
+                <h2 class="h1-heading">Blog Heading 2 (Dummy)</h2>
+                <small class="section-text">29th November 2020</small>
+                <p class="section-paragraph section-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed
+                    fugit eaque,
+                    nostrum officia ad nobis soluta, natus numquam voluptatem nemo nestbserstdrtdrtdrt....
+                </p>
+            </a>
+        </div>
+    </section>
+
+    <section class="section">
+        <div class="container container-center">
+            <a href="/blog1.html" class="link">
+                <h2 class="h1-heading">Blog Heading 1 (Dummy)</h2>
+                <small class="section-text">28th November 2020</small>
+                <p class="section-paragraph section-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed
+                    fugit eaque,
+                    nostrum officia ad nobis soluta, natus numquam voluptatem nemo nestbserstdrtdrtdrt....
+                </p>
+            </a>
+        </div>
+    </section>
 </body>
 
 </html>
