--- a/projects.html
+++ b/projects.html
@@ -52,7 +52,7 @@
                 <h2>how well do you know me?</h2>
                 <small>18th November, 2020</small>
                 <p class="section-paragraph">This is another CLI app developed using <strong>JavaScript</strong>. Its a quiz for my
-                    friends , to find out how well they knows me.</p>
+                    friends , to find out how well they know me.</p>
 
                 <a class="link link-primary" href="https://repl.it/@prachig/assigment-1?embed=1&output=1">Play Game</a>
                 <a class="link link-secondary" href="https://github.com/prachigupta28/cli-app-quiz">View source code</a>
