--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
     <section class="section">
         <div class="container container-center">
             <h1>projects</h1>
-            <p class="section-paragraph">Inorder to grasp the concepts, one must put them into use by building
-                something, therefore I would love to showcase my projects. You can see them on github or
+            <p class="section-paragraph">In order to grasp the concepts, one must put them into use by building
+                something. Therefore I would love to showcase my projects. You may view them on github or
                 live, hosted online.
             </p>
             <a href="/projects.html" class="link link-primary">Browse Projects</a>
@@ -57,7 +57,7 @@
     <section class="section section-offwhite">
         <div class="container container-center">
             <h1>blogs</h1>
-            <p>I like to share the knowledge with people through blogs. Also, I am documenting my journey of learning
+            <p>I like to impart the knowledge with people through blogs. Also, I am documenting my journey of learning
                 front end development and thus creating some tangible ouput through the medium of blogs and projects.
             </p>
             <a href="/blogs.html" class="link link-secondary">Read Blogs</a>
