modified the project descrpition

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="container container-center">
             <h1>projects</h1>
             <p class="section-paragraph">In order to grasp the concepts, one must put them into use by building
-                something. Therefore I would love to showcase my projects. You may view them on github or
+                something. Therefore, I would love to showcase my projects. You may view them on github or
                 live, hosted online.
             </p>
             <a href="/projects.html" class="link link-primary">Browse Projects</a>
