style: modified the heading

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <section class="section section-offwhite">
         <div class="container container-center">
-            <h1>technologies</h1>
+            <h1>Technologies</h1>
             <p>I'm familiar with HTML5, CSS3, JavaScript, NodeJS, ReactJS, Java 8, Git and Web Hosting. Strong
                 analytical, logical, debugging and problem solving skills with the sound knowledge in various phases of
                 SDLC. Hands on experience in Java 8, Core Spring, CORDA(Blockchain), RESTful WebServices, Drools(Rules
@@ -45,7 +45,7 @@
 
     <section class="section">
         <div class="container container-center">
-            <h1>projects</h1>
+            <h1>Projects</h1>
             <p class="section-paragraph">In order to grasp the concepts, one must put them into use by building
                 something. Therefore, I would love to showcase my projects. You may view them on github or
                 live, hosted online.
@@ -56,7 +56,7 @@
 
     <section class="section section-offwhite">
         <div class="container container-center">
-            <h1>blogs</h1>
+            <h1>Blogs</h1>
             <p>I like to impart the knowledge with people through blogs. Also, I am documenting my journey of learning
                 front end development and thus creating some tangible ouput through the medium of blogs and projects.
             </p>
