style: added footer

--- a/blogs.html
+++ b/blogs.html
@@ -56,6 +56,18 @@
             </a>
         </div>
     </section>
+
+    <footer class="footer">
+        <div>CONTACT ME</div>
+        <ul class="list-non-bullet">
+            <li class="list-inline"><a class="link" href="https://github.com/prachigupta28"><img
+                        src="/images/github.svg" class="link-image"></a> </li>
+            <li class="list-inline"><a class="link" href="https://www.linkedin.com/in/prachi-gupta28"><img
+                        src="/images/linkedin.svg" class="link-image"></a></li>
+            <li class="list-inline"><a class="link" href="https://www.twitter.com/PrachiG63746764/"><img
+                        src="/images/twitter.svg" class="link-image"></a></li>
+        </ul>
+    </footer>
 </body>
 
 </html>
