--- a/projects.html
+++ b/projects.html
@@ -51,7 +51,8 @@
             <div class="container-project container-center">
                 <h2>how well do you know me?</h2>
                 <small>18th November, 2020</small>
-                <p class="section-paragraph">This is another CLI app developed using <strong>JavaScript</strong>. Its a quiz for my
+                <p class="section-paragraph">This is another CLI app developed using <strong>JavaScript</strong>. Its a
+                    quiz for my
                     friends , to find out how well they know me.</p>
 
                 <a class="link link-primary" href="https://repl.it/@prachig/assigment-1?embed=1&output=1">Play Game</a>
@@ -59,6 +60,18 @@
             </div>
         </li>
     </ul>
+
+    <footer class="footer">
+        <div>CONTACT ME</div>
+        <ul class="list-non-bullet">
+            <li class="list-inline"><a class="link" href="https://github.com/prachigupta28"><img
+                        src="/images/github.svg" class="link-image"></a> </li>
+            <li class="list-inline"><a class="link" href="https://www.linkedin.com/in/prachi-gupta28"><img
+                        src="/images/linkedin.svg" class="link-image"></a></li>
+            <li class="list-inline"><a class="link" href="https://www.twitter.com/PrachiG63746764/"><img
+                        src="/images/twitter.svg" class="link-image"></a></li>
+        </ul>
+    </footer>
 
 </body>
 
