updated technologies desc

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <section class="section section-offwhite">
         <div class="container container-center">
             <h1>Technologies</h1>
-            <p>I'm familiar with HTML5, CSS3, JavaScript, NodeJS, ReactJS, Java 8, Git and Web Hosting. Strong
+            <p>I'm familiar with HTML5, CSS3, JavaScript, Java 8, Git and Web Hosting. Strong
                 analytical, logical, debugging and problem solving skills with the sound knowledge in various phases of
                 SDLC. Hands on experience in Java 8, Core Spring, CORDA(Blockchain), RESTful WebServices, Drools(Rules
                 Engine) with application of OOPS concepts.
