--- a/blog2.html
+++ b/blog2.html
@@ -48,6 +48,18 @@
             incidunt placeat ex aliquid nobis culpa tempora esse fugiat molestiae, dolorem deserunt commodi vitae?
         </p>
     </div>
+
+    <footer class="footer">
+        <div>CONTACT ME</div>
+        <ul class="list-non-bullet">
+            <li class="list-inline"><a class="link" href="https://github.com/prachigupta28"><img
+                        src="/images/github.svg" class="link-image"></a> </li>
+            <li class="list-inline"><a class="link" href="https://www.linkedin.com/in/prachi-gupta28"><img
+                        src="/images/linkedin.svg" class="link-image"></a></li>
+            <li class="list-inline"><a class="link" href="https://www.twitter.com/PrachiG63746764/"><img
+                        src="/images/twitter.svg" class="link-image"></a></li>
+        </ul>
+    </footer>
 </body>
 
 </html>
